syntax = "proto3";

package proto;

import "define.proto";

option go_package = "./;proto";

message AvatarAddNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1769;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    AvatarInfo avatar = 13;
    bool is_in_team = 12;
}

message AvatarDelNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1773;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated uint64 avatar_guid_list = 13;
}

message AvatarTeam {
    repeated uint64 avatar_guid_list = 7;
    string team_name = 14;
}

message SetUpAvatarTeamReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1690;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 team_id = 3;
    repeated uint64 avatar_team_guid_list = 7;
    uint64 cur_avatar_guid = 5;
}

message SetUpAvatarTeamRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1646;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated uint64 avatar_team_guid_list = 1;
    uint32 team_id = 6;
    int32 retcode = 8;
    uint64 cur_avatar_guid = 13;
}

message ChooseCurAvatarTeamReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1796;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 team_id = 9;
}

message ChooseCurAvatarTeamRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1661;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 cur_team_id = 1;
    int32 retcode = 14;
}

message ChangeAvatarReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1640;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    Vector move_pos = 15;
    uint32 skill_id = 2;
    uint64 guid = 7;
    bool is_move = 10;
}

message ChangeAvatarRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1607;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 skill_id = 3;
    int32 retcode = 10;
    uint64 cur_guid = 4;
}

message AvatarPromoteReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1664;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint64 guid = 5;
}

message AvatarPromoteRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1639;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint64 guid = 11;
    int32 retcode = 8;
}

message SpringUseReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1748;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint64 guid = 11;
}

message SpringUseRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1642;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint64 guid = 3;
    int32 retcode = 7;
}

message RefreshBackgroundAvatarReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1743;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }
}

message RefreshBackgroundAvatarRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1800;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    map<uint64, uint32> hp_full_time_map = 15;
    int32 retcode = 3;
}

message AvatarTeamUpdateNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1706;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    map<uint32, AvatarTeam> avatar_team_map = 2;
    repeated uint64 temp_avatar_guid_list = 13;
}

message AvatarDataNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1633;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated uint32 backup_avatar_team_order_list = 9;
    repeated uint64 temp_avatar_guid_list = 12;
    repeated AvatarInfo avatar_list = 6;
    uint32 cur_avatar_team_id = 2;
    repeated AvatarRenameInfo avatar_rename_list = 4;
    repeated uint32 owned_flycloak_list = 1;
    repeated uint32 owned_costume_list = 11;
    map<uint32, AvatarTeam> avatar_team_map = 7;
    uint64 choose_avatar_guid = 8;
}

message AvatarUpgradeReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1770;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint64 avatar_guid = 6;
    uint32 count = 2;
    uint32 item_id = 5;
}

message AvatarUpgradeRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1701;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 cur_level = 6;
    uint32 old_level = 13;
    map<uint32, float> old_fight_prop_map = 10;
    int32 retcode = 1;
    map<uint32, float> cur_fight_prop_map = 4;
    uint64 avatar_guid = 15;
}

message AvatarDieAnimationEndReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1610;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    Vector reborn_pos = 3;
    uint64 die_guid = 7;
    uint32 skill_id = 8;
}

message AvatarDieAnimationEndRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1694;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 skill_id = 13;
    int32 retcode = 14;
    uint64 die_guid = 15;
}

message AvatarChangeElementTypeReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1785;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 scene_id = 7;
    uint32 area_id = 3;
}

message AvatarChangeElementTypeRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1651;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 13;
}

message AvatarFetterDataNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1782;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    map<uint64, AvatarFetterInfo> fetter_info_map = 15;
}

message AvatarExpeditionDataNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1771;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    map<uint64, AvatarExpeditionInfo> expedition_info_map = 6;
}

message AvatarExpeditionAllDataReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1722;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }
}

message AvatarExpeditionAllDataRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1648;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated uint32 open_expedition_list = 3;
    int32 retcode = 15;
    uint32 expedition_count_limit = 12;
    map<uint64, AvatarExpeditionInfo> expedition_info_map = 4;
}

message AvatarExpeditionStartReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1715;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 exp_id = 9;
    uint64 avatar_guid = 10;
    uint32 hour_time = 2;
}

message AvatarExpeditionStartRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1719;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    map<uint64, AvatarExpeditionInfo> expedition_info_map = 2;
    int32 retcode = 5;
}

message AvatarExpeditionCallBackReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1752;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    repeated uint64 avatar_guid = 13;
}

message AvatarExpeditionCallBackRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1726;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    map<uint64, AvatarExpeditionInfo> expedition_info_map = 9;
    int32 retcode = 5;
}

message AvatarExpeditionGetRewardReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1623;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint64 avatar_guid = 14;
}

message AvatarExpeditionGetRewardRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1784;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated ItemParam extra_item_list = 9;
    repeated ItemParam item_list = 8;
    map<uint64, AvatarExpeditionInfo> expedition_info_map = 12;
    int32 retcode = 2;
}

message ChangeMpTeamAvatarReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1708;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint64 cur_avatar_guid = 4;
    repeated uint64 avatar_guid_list = 8;
}

message ChangeMpTeamAvatarRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1753;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 4;
    repeated uint64 avatar_guid_list = 3;
    uint64 cur_avatar_guid = 13;
}

message ChangeTeamNameReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1603;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    int32 team_id = 8;
    string team_name = 9;
}

message ChangeTeamNameRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1666;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 11;
    string team_name = 2;
    int32 team_id = 4;
}

message SceneTeamAvatar {
    AbilitySyncStateInfo avatar_ability_info = 5;
    AvatarInfo avatar_info = 8;
    bool is_on_scene = 152;
    uint32 entity_id = 9;
    uint64 avatar_guid = 15;
    uint32 scene_id = 1;
    uint32 weapon_entity_id = 7;
    SceneAvatarInfo scene_avatar_info = 3;
    uint64 weapon_guid = 4;
    AbilitySyncStateInfo weapon_ability_info = 11;
    SceneEntityInfo scene_entity_info = 12;
    uint32 player_uid = 14;
    bool is_reconnect = 6;
    AbilityControlBlock ability_control_block = 2;
    bool is_player_cur_avatar = 13;
    repeated ServerBuff server_buff_list = 10;
}

message SceneTeamUpdateNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1775;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated SceneTeamAvatar scene_team_avatar_list = 11;
    bool is_in_mp = 15;
}

message FocusAvatarReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1654;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint64 avatar_guid = 1;
    bool is_focus = 8;
}

message FocusAvatarRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1681;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 5;
    bool is_focus = 11;
    uint64 avatar_guid = 4;
}

message AvatarSatiationData {
    float finish_time = 14;
    uint64 avatar_guid = 13;
    float penalty_finish_time = 12;
}

message AvatarSatiationDataNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1693;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated AvatarSatiationData satiation_data_list = 6;
}

message AvatarWearFlycloakReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1737;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint64 avatar_guid = 11;
    uint32 flycloak_id = 13;
}

message AvatarWearFlycloakRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1698;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 flycloak_id = 13;
    uint64 avatar_guid = 7;
    int32 retcode = 6;
}

message AvatarFlycloakChangeNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1643;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 flycloak_id = 8;
    uint64 avatar_guid = 2;
}

message AvatarGainFlycloakNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1656;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 flycloak_id = 3;
}

message AvatarEquipAffixStartNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1662;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint64 avatar_guid = 4;
    AvatarEquipAffixInfo equip_affix_info = 12;
}

message AvatarFetterLevelRewardReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1653;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint64 avatar_guid = 1;
    uint32 fetter_level = 6;
}

message AvatarFetterLevelRewardRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1606;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint64 avatar_guid = 4;
    uint32 reward_id = 1;
    int32 retcode = 13;
    uint32 fetter_level = 14;
}

message AddNoGachaAvatarCardTransferItem {
    uint32 count = 9;
    uint32 item_id = 6;
    bool is_new = 15;
}

message AddNoGachaAvatarCardNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1655;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated AddNoGachaAvatarCardTransferItem transfer_item_list = 4;
    uint32 initial_promote_level = 2;
    uint32 avatar_id = 8;
    bool is_transfer_to_item = 6;
    uint32 reason = 9;
    uint32 initial_level = 10;
    uint32 item_id = 14;
}

message AvatarPromoteGetRewardReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1696;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint64 avatar_guid = 7;
    uint32 promote_level = 12;
}

message AvatarPromoteGetRewardRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1683;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 10;
    uint32 reward_id = 15;
    uint64 avatar_guid = 11;
    uint32 promote_level = 12;
}

message AvatarChangeCostumeReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1778;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 costume_id = 4;
    uint64 avatar_guid = 2;
}

message AvatarChangeCostumeRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1645;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint64 avatar_guid = 12;
    int32 retcode = 7;
    uint32 costume_id = 13;
}

message AvatarChangeCostumeNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1644;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    SceneEntityInfo entity_info = 7;
}

message AvatarGainCostumeNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1677;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 costume_id = 15;
}

message AvatarChangeAnimHashReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1711;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 anim_hash = 6;
    uint64 avatar_guid = 3;
}

message AvatarChangeAnimHashRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1647;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 anim_hash = 13;
    int32 retcode = 5;
    uint64 avatar_guid = 10;
}

message PersistentDungeonSwitchAvatarReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1684;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint64 cur_avatar_guid = 8;
    repeated uint64 avatar_team_guid_list = 3;
}

message PersistentDungeonSwitchAvatarRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1768;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated uint64 avatar_team_guid_list = 14;
    int32 retcode = 7;
    uint64 cur_avatar_guid = 15;
}

message AddBackupAvatarTeamReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1687;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }
}

message AddBackupAvatarTeamRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1735;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 4;
}

message DelBackupAvatarTeamReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1731;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 backup_avatar_team_id = 4;
}

message DelBackupAvatarTeamRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1729;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 backup_avatar_team_id = 15;
    int32 retcode = 4;
}

message AvatarTeamAllDataNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1749;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated uint64 temp_avatar_guid_list = 6;
    map<uint32, AvatarTeam> avatar_team_map = 3;
    repeated uint32 backup_avatar_team_order_list = 1;
}

message AvatarRenameInfo {
    string avatar_name = 3;
    uint32 avatar_id = 12;
}

message AvatarRenameInfoNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1680;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated AvatarRenameInfo avatar_rename_list = 8;
}

message ItemRenameAvatarReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1750;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 rename_id = 2;
    string avatar_name = 3;
}

message ItemRenameAvatarRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 1635;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 rename_id = 15;
    uint32 cd_time = 2;
    int32 retcode = 9;
}
